# Erics-OS

./: Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config
src/: console.rs  entry.asm  linker.ld  main.rs  panic.rs  sbi.rs
src/algorithm/: Cargo.toml
src/algorithm/src/: lib.rs
src/algorithm/src/allocator/: bitmap_vector_allocator.rs  stacked_allocator.rs
src/interrupt/: context.rs  handler.rs  interrupt.asm  mod.rs  timer.rs
src/memory/: address.rs  config.rs  heap.rs  mod.rs  range.rs
src/memory/frame/: allocator.rs  frame_tracker.rs
src/memory/mapping/: mapping.rs  page_table_entry.rs  segment.rs
