[package]
name = "os"
version = "0.1.0"
authors = ["brl"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# When panic occur abort!
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
algorithm = { path = "src/algorithm" }
riscv = {git = "https://github.com/rust-embedded/riscv", features = ["inline-asm"] }
buddy_system_allocator = "0.4.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.5.2"